--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "license": "ISC",
     "devDependencies": {
         "@types/jsonwebtoken": "^9.0.1",
-        "@types/object-hash": "^3.0.6",
         "eslint": "^9.0.0",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4",
@@ -23,7 +22,6 @@
     "dependencies": {
         "@sinclair/typebox": "^0.32.20",
         "@tak-ps/etl": "^5.0.0",
-        "@types/geojson": "^7946.0.10",
-        "object-hash": "^3.0.0"
+        "@types/geojson": "^7946.0.10"
     }
 }
