--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@sinclair/typebox": "^0.32.20",
         "@tak-ps/etl": "^5.0.0",
+        "@turf/simplify": "^7.0.0",
         "@types/geojson": "^7946.0.10"
     }
 }
